--- a/index.html
+++ b/index.html
@@ -119,31 +119,47 @@ mso-line-height-rule:exactly;">
 <img src="https://img2.stibee.com/87638_3195430_1768957907628387845.jpg" style="width:100%;max-width:700px;display:block;">
 </td></tr>
 
-<!-- 하단 2버튼 -->
+<!-- 하단 2버튼 (수정본) -->
 <tr>
-<td align="center" style="padding:20px;background:#F9F8F6;">
-<table width="100%" cellpadding="0" cellspacing="0">
-<tr>
-<td align="center" style="padding:5px;">
-<a href="https://moaform.com/q/gvTDKD" target="_blank"
-style="display:inline-block;width:100%;max-width:330px;background:#6b5a2e;color:#fff;
-padding:20px 26px;border-radius:999px;font-size:18px;line-height:18px;font-weight:700;text-decoration:none;">
-상담 요청
-</a>
-</td>
-<td align="center" style="padding:5px;">
-<a href="https://moaform.com/q/avya7X" target="_blank"
-style="display:inline-block;width:100%;max-width:330px;background:#6b5a2e;color:#fff;
-padding:20px 26px;border-radius:999px;font-size:18px;line-height:18px;font-weight:700;text-decoration:none;">
-교육 신청
-</a>
-</td>
-</tr>
-</table>
-</td>
-</tr>
+  <td align="center" style="padding:20px;background:#F9F8F6;">
+    <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate;">
+      <tr>
+        <!-- 왼쪽 버튼 -->
+        <td width="50%" valign="top" style="padding:0 8px 0 0;">
+          <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
+            <tr>
+              <td align="center" style="background:#6b5a2e;border-radius:999px;">
+                <a href="https://moaform.com/q/gvTDKD" target="_blank"
+                  style="display:block;width:100%;padding:20px 26px;
+                  color:#ffffff;text-decoration:none;
+                  font-size:18px;line-height:18px;font-weight:700;
+                  font-family:-apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo','Malgun Gothic','맑은 고딕',Arial,sans-serif;
+                  mso-line-height-rule:exactly;">
+                  상담 요청
+                </a>
+              </td>
+            </tr>
+          </table>
+        </td>
 
-</table>
-</div>
-</body>
-</html>
+        <!-- 오른쪽 버튼 -->
+        <td width="50%" valign="top" style="padding:0 0 0 8px;">
+          <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
+            <tr>
+              <td align="center" style="background:#6b5a2e;border-radius:999px;">
+                <a href="https://moaform.com/q/avya7X" target="_blank"
+                  style="display:block;width:100%;padding:20px 26px;
+                  color:#ffffff;text-decoration:none;
+                  font-size:18px;line-height:18px;font-weight:700;
+                  font-family:-apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo','Malgun Gothic','맑은 고딕',Arial,sans-serif;
+                  mso-line-height-rule:exactly;">
+                  교육 신청
+                </a>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
