--- a/index.html
+++ b/index.html
@@ -119,47 +119,89 @@ mso-line-height-rule:exactly;">
 <img src="https://img2.stibee.com/87638_3195430_1768957907628387845.jpg" style="width:100%;max-width:700px;display:block;">
 </td></tr>
 
-<!-- 하단 2버튼 (수정본) -->
-<tr>
-  <td align="center" style="padding:20px;background:#F9F8F6;">
-    <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate;">
+<!-- ✅ 하단 2버튼 영역(상담 요청/교육 신청) 교체본 -->
+<div class="stb-block-outer">
+  <table class="stb-block stb-cols-2" border="0" cellpadding="0" cellspacing="0"
+    style="overflow:hidden;margin:0px auto;padding:0px;width:100%;max-width:700px;clear:both;background:#F9F8F6;line-height:1.7;border:0;font-size:14px;box-sizing:border-box;"
+    width="100%">
+    <tbody>
       <tr>
-        <!-- 왼쪽 버튼 -->
-        <td width="50%" valign="top" style="padding:0 8px 0 0;">
-          <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
-            <tr>
-              <td align="center" style="background:#6b5a2e;border-radius:999px;">
-                <a href="https://moaform.com/q/gvTDKD" target="_blank"
-                  style="display:block;width:100%;padding:20px 26px;
-                  color:#ffffff;text-decoration:none;
-                  font-size:18px;line-height:18px;font-weight:700;
-                  font-family:-apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo','Malgun Gothic','맑은 고딕',Arial,sans-serif;
-                  mso-line-height-rule:exactly;">
-                  상담 요청
-                </a>
-              </td>
-            </tr>
-          </table>
-        </td>
+        <td>
+          <table class="stb-cell-wrap" border="0" cellpadding="0" cellspacing="0" width="100%">
+            <tbody>
+              <tr>
+                <td style="text-align:center;font-size:0;">
+                  
+                  <!-- LEFT -->
+                  <div class="stb-left-cell"
+                    style="max-width:350px;width:100%!important;margin:0;vertical-align:top;border-collapse:collapse;box-sizing:border-box;font-size:unset;display:inline-block;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                      <tbody>
+                        <tr>
+                          <!-- ✅ 여기 padding으로만 간격 조절 -->
+                          <td style="padding:15px 8px 15px 15px;text-align:center;">
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%"
+                              style="border-collapse:separate;background:#6b5a2e;border-radius:999px;">
+                              <tbody>
+                                <tr>
+                                  <td align="center" valign="middle"
+                                    style="background:#6b5a2e;border-radius:999px;">
+                                    <a href="https://moaform.com/q/gvTDKD" target="_blank"
+                                      style="display:block;width:100%;padding:20px 0;margin:0;
+                                      background:#6b5a2e;color:#ffffff;text-decoration:none;
+                                      font-family:-apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo','Malgun Gothic','맑은 고딕',Arial,sans-serif;
+                                      font-size:18px;line-height:18px;font-weight:700;
+                                      text-align:center;mso-line-height-rule:exactly;">
+                                      상담 요청
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
 
-        <!-- 오른쪽 버튼 -->
-        <td width="50%" valign="top" style="padding:0 0 0 8px;">
-          <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
-            <tr>
-              <td align="center" style="background:#6b5a2e;border-radius:999px;">
-                <a href="https://moaform.com/q/avya7X" target="_blank"
-                  style="display:block;width:100%;padding:20px 26px;
-                  color:#ffffff;text-decoration:none;
-                  font-size:18px;line-height:18px;font-weight:700;
-                  font-family:-apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo','Malgun Gothic','맑은 고딕',Arial,sans-serif;
-                  mso-line-height-rule:exactly;">
-                  교육 신청
-                </a>
-              </td>
-            </tr>
+                  <!-- RIGHT -->
+                  <div class="stb-right-cell"
+                    style="max-width:350px;width:100%!important;margin:0;vertical-align:top;border-collapse:collapse;box-sizing:border-box;font-size:unset;display:inline-block;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                      <tbody>
+                        <tr>
+                          <!-- ✅ 여기 padding으로만 간격 조절 -->
+                          <td style="padding:15px 15px 15px 8px;text-align:center;">
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%"
+                              style="border-collapse:separate;background:#6b5a2e;border-radius:999px;">
+                              <tbody>
+                                <tr>
+                                  <td align="center" valign="middle"
+                                    style="background:#6b5a2e;border-radius:999px;">
+                                    <a href="https://moaform.com/q/avya7X" target="_blank"
+                                      style="display:block;width:100%;padding:20px 0;margin:0;
+                                      background:#6b5a2e;color:#ffffff;text-decoration:none;
+                                      font-family:-apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo','Malgun Gothic','맑은 고딕',Arial,sans-serif;
+                                      font-size:18px;line-height:18px;font-weight:700;
+                                      text-align:center;mso-line-height-rule:exactly;">
+                                      교육 신청
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+
+                </td>
+              </tr>
+            </tbody>
           </table>
         </td>
       </tr>
-    </table>
-  </td>
-</tr>
+    </tbody>
+  </table>
+</div>
